--- a/apps/quadstream/CMakeLists.txt
+++ b/apps/quadstream/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
-project(MultiCameraWarp)
+project(QuadStream)
 
 add_subdirectory(simulator)
 add_subdirectory(receiver)
