Refactor of Quad Proxy data (#48)

--- a/apps/Common/CMakeLists.txt
+++ b/apps/Common/CMakeLists.txt
@@ -55,6 +55,8 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 pkg_check_modules(GSTREAMER_APP REQUIRED gstreamer-app-1.0)
 set(LIBS ${LIBS} ${GSTREAMER_LIBRARIES} ${GSTREAMER_APP_LIBRARIES})
+# The above code may add duplicate libraries, so remove them
+list(REMOVE_DUPLICATES LIBS)
 
 file(GLOB_RECURSE SRCS
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
