Add network streaming for QUASAR (#53)
* quasar reconstructs ref frames from disk

* set bitrate and update docs

--- a/apps/quasar/CMakeLists.txt
+++ b/apps/quasar/CMakeLists.txt
@@ -3,6 +3,7 @@ project(QUASAR)
 
 add_subdirectory(simulator)
 add_subdirectory(receiver)
+add_subdirectory(streamer)
 
 file(CREATE_LINK ${ASSETS_DIR} ${CMAKE_CURRENT_BINARY_DIR}/assets SYMBOLIC)
 file(CREATE_LINK ${RENDERER_SHADERS_DIR} ${CMAKE_CURRENT_BINARY_DIR}/shaders SYMBOLIC)
